<resources>
    <string name="app_name">GPA_50015516_Calculator</string>
    <string name="app_name_display">GPA Calculator</string>
    <string name="course1">Course 1</string>
    <string name="course2">Course 2</string>
    <string name="course3">Course 3</string>
    <string name="course4">Course 4</string>
    <string name="course5">Course 5</string>
    <string name="enter_gpa">Enter GPA</string>
    <string name="compute_gpa">Compute GPA</string>
    <string name="show_gpa">Average GPA: </string>
    <string name="hint_gpa">Enter GPA</string>
</resources>